fix(ui): update heading colors for dark mode

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -97,8 +97,8 @@
 
     --ifm-background-color: var(--docs-color-background);
 
-    --ifm-heading-color: #dcdcdc;
-    --ifm-font-color-base: #e7e7e7;
+    --ifm-heading-color: #dfdfdf;
+    --ifm-font-color-base: #f5f5f7;
 
     --color-canvas-100: var(--docs-color-background-100);
     --color-canvas-200: var(--docs-color-background-200);
